# drone_sim

./: .gitignore  CMakeLists.txt  README.md
docs/: blog-catch2-ctest-windows-debug.md  blog-cpp-oop-from-scratch.md  cpp-oop-from-scratch.md  drone-challenge-ladder.md  hello-cmake-windows-debug-log.md
output/: drone_data.csv  error_vs_dt.csv  free_fall_euler_vs_rk4.csv  particle_simulation.csv  two_motor_different.csv  two_motor_different_long_time.csv  two_motor_equal.csv
scripts/: build.bat  test.bat  update_progress.py
scripts/githooks/: pre-commit
src/: csv_logger.hpp  main.cpp
src/math/: PIDControler.hpp  RK4.hpp  vec2.hpp
src/physics/: particle.hpp  state.hpp
test/: test.cpp
tools/: plot_csv.py  plot_error_vs_dt.py  plot_trajectory.py
