cmake_minimum_required(VERSION 3.16)
project(drone_sim LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_executable(drone_sim
    src/main.cpp
)

target_include_directories(drone_sim PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})